tests/NormalTests/paczka1/fuzzy1/26689643.err
Error in line 2: m238oULtuT S229 51,0
Error in line 1: Syd A942 37,4
Error in line 9: Syd S780 113,68
Error in line 11: m238oULtuT S780 19,5
Error in line 15: JWjc S229 15,34
Error in line 19: S780 S229 34,2
Error in line 20: S780 S780 55,3
Error in line 12: g4DAvNqh S229 10,0
Error in line 29: g4DAvNqh S229 29,6
Error in line 7: Syd S780 93,3
